--- a/_posts/How can we help you?/2019-12-20-post-1.md
+++ b/_posts/How can we help you?/2019-12-20-post-1.md
@@ -1,10 +1,9 @@
 ---
 layout: post
-title: "How to Create a New Category"
+title: "post 1"
 date: 2019-11-05 08:44:38 -0400
 category: using-odin
-author: mac
-short-description: Organize your articles with categories
+author: shriti
 ---
 
 **This article is coming soon**
